--- a/package.json
+++ b/package.json
@@ -1,31 +1,32 @@
 {
   "name": "tron-smartportao",
   "version": "1.0.0",
-  "description": "TRON Smart Portão - Painel de controle com aliases e Voice Monkey",
-  "main": "server.js",
+  "description": "Painel TRON Smart Portão com MongoDB Atlas e Voice Monkey",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": "20.x"
+    "node": ">=20.0.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "mongoose": "^7.6.1"
+    "mongoose": "^7.5.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.1.10"
   },
   "keywords": [
     "tron",
     "smartportao",
-    "voice-monkey",
-    "dashboard"
+    "mongodb",
+    "render",
+    "voicemonkey"
   ],
-  "author": "Cezar Jam",
+  "author": "Cezar Rocha",
   "license": "MIT"
 }
