--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
+    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=20.0.0"
