--- a/package.json
+++ b/package.json
@@ -7,16 +7,17 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
-    "dotenv": "^16.3.1"
   },
   "engines": {
     "node": ">=20.0.0"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mongoose": "^7.5.0"
+   
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
