--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "firebase-admin": "^13.5.0",
     "mongoose": "^7.5.0"
-   
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
