--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "dotenv": "^17.2.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
